--- a/Module3/DemoSite/demo.html
+++ b/Module3/DemoSite/demo.html
@@ -32,13 +32,13 @@
             <span>Hamilton</span>
           </div>
           <div>
-            <span><img src="Australia-Flag.png" class="img-thumbnail" style="height:15%;width:15%;"></span>
+            <span><img src="" class="img-thumbnail" style="height:15%;width:15%;"></span>
             <span>Aus</span>
             <span style="float:right;">435/1</span>
 
           </div>
           <div>
-            <span><img src="India-flag.jpg" class="img-thumbnail" style="height:15%;width:15%;"></span>
+            <span><img src="" class="img-thumbnail" style="height:15%;width:15%;"></span>
             <span>Ind</span>
             <span style="float:right;"></span>
           </div>
